--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,17 @@ header {
     height: 60px;
     font-size: 1.5rem;
 }
+
+.health-bar {
+    width: 100%;
+    height: 20px;
+    border-radius: 20px;
+    border: solid 1px grey;
+}
+
+.current-health-bar {
+    width: 20%;
+    height: 20px;
+    background-color: blueviolet;
+    border-radius: 20px;
+}
